force-app/main/default/objects/Row_2_Flow_Mapping__mdt/Row_2_Flow_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Row 2 Flow Mapping</label>
    <pluralLabel>Row 2 Flow Mappings</pluralLabel>
</CustomObject>