force-app/main/default/objects/Row_2_Flow_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>UBS-3224 - Added</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>