force-app/main/default/objects/Row_2_Flow_Mapping__mdt/fields/Row_2_Flow_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Row_2_Flow_Configuration__c</fullName>
    <label>Row 2 Flow Configuration</label>
    <referenceTo>Row_2_Flow_Configuration__mdt</referenceTo>
    <relationshipLabel>Row 2 Flow Mappings</relationshipLabel>
    <relationshipName>Row_2_Flow_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>