force-app/main/default/objects/Row_2_Flow_Mapping__mdt/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>UBS-3224 - Added</description>
    <inlineHelpText>For static, this field will be the flow input variable API (case sensitive); for report value, this field will represent the report column header API (use report describe to ensure exact match)</inlineHelpText>
    <label>Source</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>