force-app/main/default/objects/Row_2_Flow_Mapping__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>UBS-3224 - Added</description>
    <inlineHelpText>For static, this field will represent the actual value; for report value this field will be the flow input variable API (case sensitive)</inlineHelpText>
    <label>Target</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>