force-app/main/default/objects/Row_2_Flow_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>UBS-3667 - Change &quot;Report Value&quot; to &quot;Source Value&quot;</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source Value</fullName>
                <default>true</default>
                <label>Source Value</label>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>