force-app/main/default/objects/Row_2_Flow_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>Row_2_Flow_Configuration__c</columns>
    <columns>Type__c</columns>
    <columns>Source__c</columns>
    <columns>Target__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>